--- a/hakkinda.html
+++ b/hakkinda.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listecim.com - En İyi Todo List Uygulaması</title>
+    <title>Listecim.com - Hakkımızda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/hakkinda.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
@@ -38,99 +39,48 @@
         </div>
     </nav>
 
+<!-- hakkımda alanı -->
+<section class="about-section">
     <div class="container">
-        <div class="row hero align-items-center">
-            <div class="col-lg-6 hero-content">
-                <h6 class="hero-title">Gününü Planla, Geleceğini Şekillendir!</h6>
-                <p class="hero-text">Türkiye'nin en çok tercih edilen todo list uygulaması Listecim.com ile görevlerinizi organize edin, projelerinizi planlayın ve zamanınızı etkili bir şekilde yönetin. Kullanıcı dostu arayüzü ve pratik özellikleriyle hayatınızı kolaylaştırın!</p>
-                <a href="todolist.php" class="get-started-btn">Hemen Başla</a>
+        <div class="row align-items-center">
+            <!-- Sol taraf - Metin içeriği -->
+            <div class="col-lg-6">
+                <h1 class="about-title">Görevlerinizi Organize Edin</h1>
+                <p class="about-description">
+                    Listecim.com, Toros Üniversitesi final projesi olarak geliştirdiğimiz bir web tabanlı todo list uygulamasıdır. Kullanıcıların görevlerini organize etmelerine yardımcı olmayı amaçlayan bu platform, modern bir tasarım ile kullanıcı dostu özellikler sunmaktadır. <br> 'Görevlerinizi Organize Edin' sloganıyla yola çıkan Listecim.com, bireylerin günlük işlerini daha verimli bir şekilde planlamalarını ve takip etmelerini sağlamak için tasarlanmıştır.
+                    Proje, kullanıcı deneyimine öncelik vererek pratik, güvenilir ve etkili bir çözüm sunmayı hedeflemektedir.
+                </p>
+                <ul class="stats-list">
+                    <li class="stats-item">
+                        <div class="stats-icon">
+                            <i class="fas fa-users"></i>
+                        </div>
+                        <div class="stats-text">100,000+ Aktif Kullanıcı</div>
+                    </li>
+                    <li class="stats-item">
+                        <div class="stats-icon">
+                            <i class="fas fa-tasks"></i>
+                        </div>
+                        <div class="stats-text">1 Milyon+ Tamamlanan Görev</div>
+                    </li>
+                    <li class="stats-item">
+                        <div class="stats-icon">
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="stats-text">4.9/5 Kullanıcı Memnuniyeti</div>
+                    </li>
+                </ul>
             </div>
-            <div class="col-lg-6 hero-image">
-                <div class="blue-blob"></div>
-                <img src="img/iconkadın.png" alt="Todo list resim">
-            </div>
-        </div>
-    </div>
-
-<!-- about -->
-<section class="about-section" id="hakkimizda">
-    <div class="container">
-        <h2 class="about-subtitle">Bizi Tanıyın</h2>
-        <h1 class="about-title">Neden Listecim.com?</h1>
-        
-        <div class="row">
-            <div class="col-md-4">
-                <div class="about-card">
-                    <div class="about-icon">
-                        <i class="fas fa-mobile-alt"></i>
-                    </div>
-                    <h3>Kolay Kullanım</h3>
-                    <p>Sade ve kullanıcı dostu arayüzümüz ile görevlerinizi saniyeler içinde organize edin. Her yaştan kullanıcı için ideal!</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="about-card">
-                    <div class="about-icon">
-                        <i class="fas fa-gift"></i>
-                    </div>
-                    <h3>Ücretsiz</h3>
-                    <p>Temel özelliklerimiz tamamen ücretsiz! Listecim.com'u hiçbir ücret ödemeden kullanmaya başlayabilirsiniz.</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="about-card">
-                    <div class="about-icon">
-                        <i class="fas fa-headset"></i>
-                    </div>
-                    <h3>7/24 Destek</h3>
-                    <p>Teknik ekibimiz sorularınızı yanıtlamak için her zaman hazır. Müşteri memnuniyeti bizim için öncelik!</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="about-stats">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="stat-item">
-                        <i class="fas fa-users stat-icon"></i>
-                        <div class="stat-number">100,000+</div>
-                        <div class="stat-text">Aktif Kullanıcı</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="stat-item">
-                        <i class="fas fa-tasks stat-icon"></i>
-                        <div class="stat-number">1,000,000+</div>
-                        <div class="stat-text">Tamamlanan Görev</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="stat-item">
-                        <i class="fas fa-star stat-icon"></i>
-                        <div class="stat-number">4.9/5</div>
-                        <div class="stat-text">Kullanıcı Memnuniyeti</div>
-                    </div>
+            <!-- Sağ taraf - Resim -->
+            <div class="col-lg-6">
+                <div class="about-image">
+                    <img src="img/hakkinda.png" alt="Listecim.com hakkında görsel">
                 </div>
             </div>
         </div>
     </div>
 </section>
-
-<!-- todo list oluşturmadınız mı alanı -->
-
-<section class="todo-section">
-    <div class="content-wrapper">
-        <div class="todo-header">
-            <h2>Todo List Oluşturmadınız mı?</h2>
-            <p>"Hâlâ bir todo list oluşturmadınız mı? Listecim.com ile notlarınızı kolayca düzenleyin ve görevlerinizi kontrol altında tutun!"</p>
-        </div>
-        <a href="todolist.php">
-            <button class="cta-button">
-                Todo List Oluşturmaya Başla
-            </button>
-        </a>
-    </div>
-</section>
+<!-- hakkımda alanı -->
 
 <!-- footer alanı -->
 <footer class="footer">
@@ -153,8 +103,8 @@
                 </div>
             </div>
 
-            <!-- Hızlı Linkler -->
-            <div>
+             <!-- Hızlı Linkler -->
+             <div>
                 <h3 class="footer-title">Hızlı Linkler</h3>
                 <ul class="footer-links">
                     <li><a href="index.html">Anasayfa</a></li>
@@ -187,7 +137,7 @@
 
         <!-- Telif Hakkı -->
         <div class="footer-bottom">
-            <p>&copy; 2024 Listecim.com - Tüm hakları saklıdır.</p>
+            <p>&copy; 2025 Listecim.com - Tüm hakları saklıdır.</p>
         </div>
     </div>
 </footer>
